--- a/app/views/dashboards/admin.html.erb
+++ b/app/views/dashboards/admin.html.erb
@@ -1,5 +1,11 @@
-<ul>
-	<% @list.each do |user| %>
-		<li><%= user.first_name %> <%= user.email%></li>
-	<% end %>
-</ul>
+<div class="container">
+	<div class="row">
+		<div class="span12">
+			<ul>
+				<% @list.each do |user| %>
+					<li><%= user.first_name %> <%= user.email%></li>
+				<% end %>
+			</ul>
+		</div>
+	</div>
+</div>
