minocr span chang ein companies index

--- a/app/views/companies/index.html.erb
+++ b/app/views/companies/index.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
 	<div class="row">
-		<div class="span7 jobIndex">
-			<h3>All Job Opportunities</h3>
+		<div class="span9 jobIndex">
+			<h3>Companies List</h3>
 			<ul class="unstyled">
 				<% @allCompanies.each do |c| %>
 					<%= link_to c do %>
