--- a/app/views/dashboards/dashboard.html.erb
+++ b/app/views/dashboards/dashboard.html.erb
@@ -51,22 +51,10 @@
 			<div class="span12 profileSpot jobList">
 				<div class="row">
 					<div class="span8">
-						<h3>More Job Opportunities</h3>
-						<ul>
-							<% @jobs.each do |j| %>
-								<%= link_to j do %>
-									<li><strong><%= j.find_company.name %></strong> - <%= j.name %>
-									</li>
-								<% end %>
-							<% end %>
-						</ul>
-					</div>
+						<%= render 'dashboards/show_most_jobs' %>
+					</div>					
 					<div class="span4">
-						<% @companies.each do |c|%>
-							<%= link_to c do%>
-								<%= c.name %> 
-							<% end %> -
-						<% end %>
+						<%= render 'dashboards/show_most_companies' %>
 					</div>
 				</div>
 			</div>
