--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -11,19 +11,6 @@ $textAqua: #DEFAF6;
 $lightGrey: #CCCCCC;
 $lightGreen: #B5F7C2;
 $linkBlue: #19558d;
-
-
-@font-face {
-    font-family: 'OswaldBook';
-    src: url('Oswald-Regular-webfont.eot');
-    src: url('Oswald-Regular-webfont.eot?#iefix') format('embedded-opentype'),
-         url('Oswald-Regular-webfont.woff') format('woff'),
-         url('Oswald-Regular-webfont.ttf') format('truetype'),
-         url('Oswald-Regular-webfont.svg#OswaldBook') format('svg');
-	    font-weight: normal;
-	    font-style: normal;
-	}
-	
 	
 /* Universals */
 	
@@ -352,7 +339,17 @@ $linkBlue: #19558d;
 	}
 	
 	.sidebar {
-	
+		li{
+			background-color:$siteGreen;
+			border-radius:5px;
+			a {
+				color:$lightGreen;
+			}
+			a:hover{
+				color:$siteGreen;
+				background-color:$lightGreen;
+			}
+		}
 	}
 	
 	.appManage {
