--- a/app/views/shared/_report_problems.html.erb
+++ b/app/views/shared/_report_problems.html.erb
@@ -8,4 +8,9 @@
 			<%= f.submit "Submit", :class=>"btn btn-success" %>	
 		<% end %>
 	</div>
+	
+	<ul class="nav nav-pills nav-stacked">
+		<li><%= link_to 'All Companies', companies_path%></li>
+		<li><%= link_to 'All Jobs', jobs_path%></li>
+	</ul>
 <% end %>
