small styling change

--- a/app/views/shared/_report_problems.html.erb
+++ b/app/views/shared/_report_problems.html.erb
@@ -9,8 +9,10 @@
 		<% end %>
 	</div>
 	
-	<ul class="nav nav-pills nav-stacked">
-		<li><%= link_to 'All Companies', companies_path%></li>
-		<li><%= link_to 'All Jobs', jobs_path%></li>
-	</ul>
+	<div class="sidebar">
+		<ul class="nav nav-pills nav-stacked">
+			<li><%= link_to 'All Companies', companies_path%></li>
+			<li><%= link_to 'All Jobs', jobs_path%></li>
+		</ul>
+	</div>
 <% end %>
