--- a/app/views/dashboards/_appmanage.html.erb
+++ b/app/views/dashboards/_appmanage.html.erb
@@ -12,8 +12,8 @@
 		<% job = apps.find_job %>
 		<% company = job.find_company %>
 		<div class="appManage">
-			<div class="row">
-				<div class="span3">
+			<div class="row-fluid">
+				<div class="span2">
 					<%= form_for apps, :as => :applist do |f| %>
 						<%= f.select :status, [['Not Started'], ['Researched'],
 						                       ['Sent Application'],['Completed All'],['Unfollow', 'unfollow']],{},
@@ -22,23 +22,27 @@
 					<% end %>
 				</div>
 			 
-				<div class="span9">
+
+				
+				<div class="span4">
 					<%= link_to job do %>
 						<strong><%= company.name %></strong></br>
 						<%= job.name %>
-						
-	  					<span class="pull-right"> Closes <%= job.show_due_date %></span>
-						
-					<% end %>
-					<% if false %>
-						<%= link_to "x", apps, method: :delete,
-													  data: { confirm: 'You Sure?'}%>													
-						<div class="info">
-							<%= truncate(job.info, :length => 140)%>
-						</div>																	
 					<% end %>
 				</div>
-			</div>					
-		</div>
+
+				<div class="span1">
+					</br>
+					<%= link_to "Website", company.website %>
+				</div>
+				
+				<div class="span5">
+					</br>
+					<span class="pull-right">Closes <%= job.show_due_date %></span>
+				</div>
+
+			</div>
+		
+	</div>
 	<% end %>
 <% end %>
