--- a/app/views/dashboards/admin.html.erb
+++ b/app/views/dashboards/admin.html.erb
@@ -1,12 +1,34 @@
 <div class="container">
 	<div class="row">
 		<div class="span12">
+			<b> Summary </b>
+			<p>There are <%= Company.all.count %> Companies</p>
+			
+			<p> There are <%= User.all.count %> Users </p>
+			
+			<p> There are <%= AppList.all.count %> jobs being followed
+			
 			<ul>
-				<% @list.each do |user| %>
-					<li><%= user.first_name %> <%= user.email%></li>
-				<% end %>
+				<table border = 2>
+				<tr>
+					<th> First Name </th>
+					<th> Email </th>
+					<th> Phone Number </th>
+					<th> User Id </th>
+				</tr>
 				
-				<p>There are <%= Company.all.count %> Companies</p>
+				<% @list.each do |user| %>
+				
+				<tr>
+					<td><%= user.first_name %> </td>
+					<td><%= user.email %> </td>
+					<td><%= user.mobile_number %> </td>
+					<td><%= user.id %> 
+				</tr>
+				<% end %>
+				</table>
+				</br>
+				# We should add a column to see how many jobs each user is following - that way we can get feedback from the most active users
 			</ul>
 		</div>
 	</div>
