--- a/app/views/staticpages/_copywritearea.html.erb
+++ b/app/views/staticpages/_copywritearea.html.erb
@@ -1,17 +1,17 @@
-<div class="copywriteArea">
-	<div class="container">	
-		<div class="row">
-			<%= link_to image_tag('alpha-logo.png'), root_path%>
-	
-			<div class="pull-right">
-				<div class="copywriteAreaRight">
-				</br>
-				<p>Happy <%= Time.now.strftime("%A") %> ! &nbsp  
-				<%= link_to 'Log In', new_user_session_path, :class=> "btn btn-small btn-info"%></p>
+<% cache do %>
+	<div class="copywriteArea">
+		<div class="container">	
+			<div class="row">
+				<%= link_to image_tag('alpha-logo.png'), root_path%>
+<% end %>	
+				<div class="pull-right">
+					<div class="copywriteAreaRight">
+					</br>
+					<p>Happy <%= Time.now.strftime("%A") %> ! &nbsp  
+					<%= link_to 'Log In', new_user_session_path, :class=> "btn btn-small btn-info"%></p>
+					</div>
 				</div>
 			</div>
 		</div>
 	</div>
-</div>
-
-</br>
+	</br>
