--- a/app/views/layouts/_signed_in_header.html.erb
+++ b/app/views/layouts/_signed_in_header.html.erb
@@ -4,7 +4,7 @@
 			<div class="span2">
 				<%= link_to image_tag('resumeQuery_white.png'), root_path %> 
 			</div>
-			<div class="span6 searchBox">
+			<div class="span6">
 			</div>
 			<div class="pull-right">
 				<ul class="inline">
