--- a/app/views/layouts/_signed_in_header.html.erb
+++ b/app/views/layouts/_signed_in_header.html.erb
@@ -13,5 +13,9 @@
 				</ul>
 			</div>	
 		</div>
+		
+		<!-- Future search area goes here. Graphic Base style will be like amazon.com -->
+		
+		
 	</div>
 </div>
