--- a/app/views/dashboards/dashboard.html.erb
+++ b/app/views/dashboards/dashboard.html.erb
@@ -1,6 +1,15 @@
 	<div class="container">		
 		<div class="row">
 			<div class="span12">
+				
+				<div class="row-fluid appManage">
+					<div>
+						<p> Test</p>
+						<%= link_to "Testing Ajax Here", '#', id: "test", remote: true %>
+					</div>
+					<hr>
+				</div>
+				
 				<div class="row-fluid appArea">
 					<%= render 'dashboards/appmanage'%>
 				</div>
