--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -9,7 +9,8 @@ $standard-padding: 20px;
 $base-green:  #39b54a;
 $light-green: #B5F7C2;
 $top-green:   #54bb62;
-
+$light-grey: #F2F2F2;
+$ft-color: #fff1e0;
 
 /* ========= END SECTION: STYLE VARIABLES =========*/
 
@@ -32,12 +33,24 @@ body {
 	}
 }
 
+textarea {
+	width:100%;
+	height:90px;
+}
+
 .hidden{
 	display:none;
 }
 
 .appManage {
-	:hover{
-		background-color:$light-green;
+	a {
+		text-decoration:none;	
 	}
 }
+
+.editer {
+	background-color:$light-grey;
+	height:100px;
+	padding:25px;
+}
+
