--- a/app/views/dashboards/dashboard.js.erb
+++ b/app/views/dashboards/dashboard.js.erb
@@ -6,7 +6,7 @@ $(document).ready(function(){
 		$("#app-line-<%= apps.id%>").click(function () {
 			//$(this).hide();
 			$("#edit-line-<%= apps.id%>").slideDown(100);
-			//$(this).hide();
+			$(this).hide();
 		});
 	
 		$("#edit-line-<%= apps.id%>").click(function(){
