--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,8 +1,6 @@
-
-<div class="container">
-	<div class="row">
+<div class="container-fluid footing">
+	<div class="row-fluid">
 		<div class="span12">
-			<hr>
 			<div class="footer">
 				<ul class="inline">
 					<li><strong>resumeQuery</strong></li>
@@ -18,7 +16,7 @@
 					
 					<% end %>
 					
-					<li class="pull-right">  </li>
+					<li class="pull-right">  Test</li>
 					
 				</ul>
 			</div>
