--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html>
 	<head>
-
 	  <title>Internship & graduate job application management software: ResumeQuery</title>
      <link href='http://fonts.googleapis.com/css?family=Noto+Sans:400,700' rel='stylesheet' type='text/css'>
 	  <%= stylesheet_link_tag    "application", :media => "all" %>
@@ -11,16 +10,18 @@
 	</head>
 	<body>
 		<% if signed_in? %>
+			<% if false %>
 			<% cache "header" do %>
 				<%=render 'layouts/signed_in_header'%>
+			<% end %>
 			<% end %>
 		<% else %>
 			<%=render 'staticpages/copywritearea'%>			
 		<% end %>
 		
 		<% if flash.count > 0 %>
-		<div class="container">
-			<div class="row">
+		<div class="container-fluid">
+			<div class="row-fluid">
 				<div class="span12">
 				<% flash.each do |key, message| %>
 					<%= content_tag :div, message,class: "alert alert-#{key}", :id => "flash" if message.length > 0 %>
