--- a/app/views/dashboards/dashboard.html.erb
+++ b/app/views/dashboards/dashboard.html.erb
@@ -1,33 +1,14 @@
-	<div class="container">		
-		<div class="row">
-			<div class="span12">
-
-				
-				<div class="row-fluid appArea">
-					<%= render 'dashboards/appmanage'%>
-				</div>
-			
-				
-				<% if can? :create, @job %>
-					<div class="row-fluid profileSpot">
-						<ul>
-							<li><strong>LINKS - Remove when admin set up</strong></li>
-							<li><%= link_to 'Problems-Page', problems_path %></li>
-							<li>Companies:</li>
-							<ul>
-								<% Company.all.each do |company| %>
-									<li><%= link_to "#{company.name}", company %></li>
-								<% end %>
-							</ul>
-							<li><%= link_to 'New company page', new_company_path %>
-						</ul>
-					</div>			
-				<% end %>
+<div class="container-fluid">		
+	<div class="row-fluid">
+		<div class="span2 ">
+			<div class="left-dashboard">
+				<%= link_to image_tag('resumeQuery_white.png'), root_path %>
+				<li><%= link_to 'User Settings', edit_user_registration_path %></li>
+				<li><%= link_to 'Log Out', destroy_user_session_path, :method =>'delete' %></li> 
 			</div>
-
-		</div>		
-	</div>
-	
-	
-		
-	</div>
+		</div>
+		<div class="span10">
+			<%= render 'dashboards/appmanage' %>
+		</div>
+	</div>		
+</div>
