--- a/app/views/layouts/_signed_in_header.html.erb
+++ b/app/views/layouts/_signed_in_header.html.erb
@@ -1,5 +1,5 @@
 <div class="signedInHeader">
-	<div class="container">
+	<div class="container-fluid">
 		<div class="row">
 			<div class="span2">
 				<%= link_to image_tag('resumeQuery_white.png'), root_path %> 
