changing app-lists showing on dashboard

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -33,12 +33,18 @@ $line-grey: #D6D6D6;
 body {
 	font-family: 'Noto Sans', sans-serif;	
 	font-size:16px;
+	height:100%;
 }
 
 textarea {
 	width:100%;
 	height:90px;
 }
+
+select {
+	width:100%;
+}
+
 
 .hidden{
 	display:none;
@@ -86,7 +92,7 @@ textarea {
 
 .editer {
 	background-color:$background-grey;
-	border:2px solid $line-grey;
+	border:1px solid $line-grey;
 
 }
 
@@ -98,17 +104,36 @@ textarea {
 }
 
 .editer-body{
+
+	font-size:13px;
+	line-height:15px;
+}
+
+.editer-main{
+	padding:$standard-padding;
+	border-right: 3px solid $line-grey;
+}
+
+.editer-right-bar{
 	padding:$standard-padding;
 }
+
 /* ========= END SECTION: EDITER =========*/
 
 
 .left-dashboard {
 	background-color:$base-green;
-	height:1000px;
+	min-height:700px;
 	border-right:1px solid $line-grey;
 	padding-left:25px;
 	margin-left:-20px;
+	a:hover{
+		color:white;
+		text-decoration:none;
+		img {
+			background-color:$top-green;
+		}
+	}
 }
 
 .footing {
@@ -118,4 +143,8 @@ textarea {
 
 .dash-area {
 	padding-top:30px;
+}
+
+.app-title {
+	border-bottom:1px solid $line-grey;
 }
