--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,5 +1,5 @@
-<div class="container-fluid footing">
-	<div class="row-fluid">
+<div class="container footing">
+	<div class="row">
 		<div class="span12">
 			<div class="footer">
 				<ul class="inline">
